--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API HOME PAGE</title>
 </head>
-<body style="background-image:url('https://static.vecteezy.com/system/resources/previews/006/574/647/non_2x/travel-and-tourism-background-vector.jpg');">
-    <form data-th-action="@{/citypage}" method="get">
+<body style="background-image:url('https://cdn.dribbble.com/users/952407/screenshots/17672558/media/551556360e747b7fde7b2dc3565a34a6.gif');background-repeat: no-repeat;  background-attachment: fixed;
+background-size: 100% 100%;">
+    <center>
+    <form action="/cityview" method="get">
         <div>
             <h1 style="color:darkblue ;">City Recommendations Page</h1>
             <hr style="color:darkblue ;">
@@ -23,5 +25,5 @@
             <br>
             <button class="btn btn-primary" type="submit">Get Recommendations</button>
         </div>
-</body>
+</body></center>
 </html>
