--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
+      <title>First Page</title>
    </head>
    <body style="background-image: url('https://i.pinimg.com/originals/a6/da/90/a6da90ae21d0e81fc323d5c4c9015298.gif');  background-repeat: no-repeat;  background-attachment: fixed;
    background-size: 100% 100%;">
