--- a/src/main/resources/templates/view2.html
+++ b/src/main/resources/templates/view2.html
@@ -8,40 +8,44 @@
 
     <title>Planner Page</title>
 </head>
-<body>
+<body style="background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/9e824d69132997.5b75a8aba25aa.gif');  background-repeat: no-repeat;  background-attachment: fixed;
+   background-size: 100% 30%;">
     <div class="container">
         <br>
-        <a th:href="@{/planner/list}" class="btn btn-primary">Back to Planner Home Page</a>
+        <a th:href="@{/planner}" class="btn btn-primary">Back to Planner Home Page</a>
+
+        <input type="hidden" name="name" data-th-value="${name}">
+
         <br><br>
-        <h1>Adding Itinerary List</h1>
+        <h1 style="color:darkblue ;">Adding Itinerary List</h1>
         <hr>
-        <form method="POST" th:action="@{/planner/saveplanner}" th:object="${itineraries}">
+        <form method="POST" th:action="@{/planner/save}" th:object="${itineraries}">
             <div class="mb-3">
-                <label for="day" class="form-label">Day: </label>
-                <input type="number" class="form-control" name="day" th:field="*{day}" />
+                <label for="day" class="form-label" style="color:darkblue ;">Day: </label>
+                <input type="number" class="form-control" name="day" th:field="*{day}"  />
             </div>
             <div class="alert alert-danger" th:if="${#fields.hasErrors('day')}" th:errors="*{day}"></div>
 
             <div class="mb-3">
-                <label for="date" class="form-label">Date: </label>
+                <label for="date" class="form-label" style="color:darkblue ;">Date: </label>
                 <input type="date" class="form-control" name="date" th:field="*{date}" />
             </div>
             <div class="alert alert-danger" th:if="${#fields.hasErrors('date')}" th:errors="*{date}"></div>
 
             <div class="mb-3">
-                <label for="location" class="form-label">Location: </label>
+                <label for="location" class="form-label" style="color:darkblue ;">Location: </label>
                 <input type="text" class="form-control" name="location" th:field="*{location}" />
             </div>
             <div class="alert alert-danger" th:if="${#fields.hasErrors('location')}" th:errors="*{location}"></div>
 
             <div class="mb-3">
-                <label for="activity" class="form-label">Activities: </label><br>
+                <label for="activity" class="form-label" style="color:darkblue ;">Activities: </label><br>
                 <textarea rows="6" cols="175" style="font-family:sans-serif;font-size:1.2em;" name="activity" th:field="*{activity}" ></textarea>
             </div>
             <div class="alert alert-danger" th:if="${#fields.hasErrors('activity')}" th:errors="*{activity}"></div>
 
             <div class="mb-3">
-                <label for="remarks" class="form-label">Remarks: </label>
+                <label for="remarks" class="form-label" style="color:darkblue ;">Remarks: </label>
                 <br>
                 <textarea rows="10" cols="175" style="font-family:sans-serif;font-size:1.2em;" name="remarks" th:field="*{remarks}" ></textarea>
             </div>
