--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,9 @@
 <body style="background-image:url('https://cdn.dribbble.com/users/952407/screenshots/17672558/media/551556360e747b7fde7b2dc3565a34a6.gif');background-repeat: no-repeat;  background-attachment: fixed;
 background-size: 100% 100%;">
     <center>
-    <form action="/cityview" method="get">
+        <input type="hidden" name="name" data-th-value="${name}"> 
+        
+    <form action="/reccpage" method="get">
         <div>
             <h1 style="color:darkblue ;">City Recommendations Page</h1>
             <hr style="color:darkblue ;">
