--- a/src/main/resources/templates/view1.html
+++ b/src/main/resources/templates/view1.html
@@ -49,7 +49,7 @@
                 </tr>
             </tbody>
         </table>
-        <a th:href="@{'/index?name=' + ${name}}" class="btn btn-warning">Back to User Page</a>
+        <a th:href="@{/exit}" class="btn btn-warning">Back to User Page</a>
     </div>
 </body>
     
