--- a/src/main/resources/templates/view3.html
+++ b/src/main/resources/templates/view3.html
@@ -14,7 +14,7 @@
         <br>
         <a th:href="@{/planner}" class="btn btn-primary">Back to Planner Home Page</a>
         <br><br>
-        <h1 style="color:darkblue ;">Adding Itinerary List</h1>
+        <h1 style="color:darkblue ;">Update Itinerary List</h1>
         <hr>
         <form method="POST" th:action="@{/planner/update}" th:object="${itineraries}" >
 
