--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
       <form method="GET" action="/planner">
 
          <div style="color:darkblue ;">
-            USERNAME: <input type="text" name="username" size="30">
+            USERNAME: <input type="text" name="name" size="30">
             <button style="color:darkblue ;" type="submit">Get Planner</button>
          </div>
 
